# movement_logger_desktop

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
btleplug-patched/: .cargo_vcs_info.json  .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  LICENSE.md  README.md
btleplug-patched/.github/: FUNDING.yml  bug_report.md
btleplug-patched/.github/ISSUE_TEMPLATE/: bug_report.md  features.md
btleplug-patched/.github/workflows/: rust.yml
btleplug-patched/examples/: discover_adapters_peripherals.rs  event_driven_discovery.rs  lights.rs  subscribe_notify_characteristic.rs
btleplug-patched/src/: lib.rs  platform.rs  serde.rs
btleplug-patched/src/api/: bdaddr.rs  bleuuid.rs  mod.rs
btleplug-patched/src/bluez/: adapter.rs  manager.rs  mod.rs  peripheral.rs
btleplug-patched/src/common/: adapter_manager.rs  mod.rs  util.rs
btleplug-patched/src/corebluetooth/: adapter.rs  central_delegate.rs  ffi.rs  future.rs  internal.rs  manager.rs  mod.rs  peripheral.rs
btleplug-patched/src/corebluetooth/utils/: core_bluetooth.rs  mod.rs
btleplug-patched/src/droidplug/: adapter.rs  manager.rs  mod.rs  peripheral.rs
btleplug-patched/src/droidplug/java/: .gitignore  build.gradle  settings.gradle
btleplug-patched/src/droidplug/java/src/main/: AndroidManifest.xml
btleplug-patched/src/droidplug/java/src/main/java/com/nonpolynomial/btleplug/android/impl/: Adapter.java  BluetoothException.java  NoSuchCharacteristicException.java  NotConnectedException.java  Peripheral.java  PermissionDeniedException.java  ScanFilter.java  UnexpectedCallbackException.java  UnexpectedCharacteristicException.java
btleplug-patched/src/droidplug/jni/: mod.rs  objects.rs
btleplug-patched/src/winrtble/: adapter.rs  manager.rs  mod.rs  peripheral.rs  utils.rs
btleplug-patched/src/winrtble/ble/: characteristic.rs  descriptor.rs  device.rs  mod.rs  service.rs  watcher.rs
gps-debug/: Cargo.toml
gps-debug/src/: cfg_read.rs  known_good.rs  lib.rs  main.rs  survey.rs
race-relay/: Cargo.toml  race-relay.service
race-relay/src/: main.rs
race-setup-pdf/: Cargo.toml
race-setup-pdf/src/: main.rs
stbox-viz/: Cargo.toml  README.md
stbox-viz-gui/: Cargo.toml  README.md  build.rs  entitlements-appstore.plist
stbox-viz-gui/assets/: Info.plist.template  MovementLogger.desktop  install-linux.sh
stbox-viz-gui/examples/: ble_probe.rs
stbox-viz-gui/src/: agent.rs  agent_config.rs  autostart.rs  ble.rs  ble_debug.rs  calibration.rs  coord.rs  errlog_check.rs  installer.rs  main.rs  mpv.rs  power.rs  race.rs  sync_core.rs  sync_db.rs  update.rs
stbox-viz-gui/windows/: AppxManifest.xml
stbox-viz/examples/: board_debug.rs
stbox-viz/src/: animate_cmd.rs  baro.rs  bin_util.rs  board3d.rs  butter.rs  compass_cmd.rs  euler.rs  fusion.rs  fusion_height.rs  gps.rs  html.rs  io.rs  lib.rs  main.rs  merge_cmd.rs  plot_common.rs  pumpfoil_cmd.rs  sensors_cmd.rs  session.rs  spectrogram.rs
usb-console/: Cargo.toml
usb-console/src/: main.rs
winit-patched/src/platform_impl/macos/: ffi.rs
