[workspace]
resolver = "2"
members = [
    "stbox-viz",
    "stbox-viz-gui",
    "usb-console",
    "gps-debug",
    "race-setup-pdf",
    "race-relay",
]
exclude = [
    # Vendored, patched winit fork pulled in via [patch.crates-io] from
    # stbox-viz-gui — it ships its own workspace which we must not nest
    # under this one.
    "winit-patched",
    # Vendored, patched btleplug fork pulled in via [patch.crates-io].
    # Adds a macOS CoreBluetooth retrieve-by-identifier + pending-connect
    # path (Central::add_peripheral / RetrievePeripheral) so the desktop
    # reconnects like iOS/Android without a scan — upstream btleplug only
    # reconnects via scan re-discovery, which macOS CoreBluetooth blocks for
    # a recently-connected peripheral (the "must power-cycle the box" bug).
    # Excluded so Cargo doesn't adopt it as a first-class member.
    "btleplug-patched",
]

# Apply the App-Store-safe winit patch globally so any workspace member
# that pulls in winit transitively (eframe → winit) sees the fork. The
# patch removes the private `_CGSSetWindowBackgroundBlurRadius` symbol
# call from `Window::set_blur`. Required for Apple's binary scanner to
# accept Mac App Store uploads. See workspace CLAUDE.md.
[patch.crates-io]
winit = { path = "winit-patched" }
# Vendored btleplug fork: macOS retrieve-by-identifier + pending connect for
# scan-less reconnect (see btleplug-patched/ and the exclude comment above).
# MUST stay pinned to the same version the graph resolves (0.11.8) or this
# [patch] silently no-ops and reconnect regresses to scan-only.
btleplug = { path = "btleplug-patched" }

# Workspace-level release profile. Cargo silently ignores member-level
# `[profile.*]` blocks in a workspace, so any tuning lives here.
[profile.release]
lto = true
codegen-units = 1
strip = true

