[package]
name = "stbox-viz"
version = "0.0.8"
edition = "2024"
description = "SensorTile.box-Pro pumpfoil session visualiser — replaces Utilities/scripts/*.py"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plotters = { version = "0.3", features = ["bitmap_encoder", "bitmap_backend", "line_series", "all_series"] }
rustfft = "6"
gif = "0.13"

